--- a/experience-you-should-know/the-angular-set-get-localstorage-project/src/app/bootstrap-localStorage/bootstrap-localStorage.component.html
+++ b/experience-you-should-know/the-angular-set-get-localstorage-project/src/app/bootstrap-localStorage/bootstrap-localStorage.component.html
@@ -31,7 +31,7 @@
     <thead>
       <tr class="header">
         <th class="col-xs-1">Firstname</th>
-        <th class="col-xs-3">Lastnam</th>
+        <th class="col-xs-3">Lastname</th>
         <th class="col-xs-3">Age</th>
         <th class="col-xs-2">Address</th>
         <th class="col-xs-2">Action</th>
