update code view child

--- a/experience-you-should-know/the-angular-use-component-and-component-interactions/src/app/component-interaction-viewchild/create-employee-viewchild/create-employee-viewchild.component.html
+++ b/experience-you-should-know/the-angular-use-component-and-component-interactions/src/app/component-interaction-viewchild/create-employee-viewchild/create-employee-viewchild.component.html
@@ -30,4 +30,5 @@
     </div>
   </div>
 </div>
-<app-employee-share ></app-employee-share>
+
+<app-employee-share-viewchild #employeeShareViewChildComponent [employee]="employee" ></app-employee-share-viewchild>
