--- a/experience-you-should-know/the-angular-use-component-and-component-interactions/src/app/component-interaction-through-service/employee-share-service/employee-share-service.component.html
+++ b/experience-you-should-know/the-angular-use-component-and-component-interactions/src/app/component-interaction-through-service/employee-share-service/employee-share-service.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2 style="color: red;" *ngIf="employeeList.length != undefined && employeeList.length !=null && employeeList.length > 0">Called service success</h2>
   <table class="table table-bordered">
     <thead>
       <tr class="header">
@@ -13,7 +14,7 @@
       <tr *ngFor="let employee of employeeList">
         <td class="col-xs-1">
           <input [ngModelOptions]="{standalone:true}" class="form-control" [(ngModel)]="employee.choiceEmployee"
-            type="checkbox"/>
+            type="checkbox" (ngModelChange)="choiceEmployee()" />
         </td>
         <td class="col-xs-1">
           <input [ngModelOptions]="{standalone:true}" class="form-control" [(ngModel)]="employee.firstname"
